# autonote

./: .autonoterc.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Justfile  README.md  TASK_LOG.md  meetings-folder-bugs.md  pyproject.toml  test_bug2_fix.py
docs/: realtime-coach-mode.md
examples/profiles/: negotiation.yaml
scripts/: benchmark_models.py  parse_llm_metrics.py
src/autonote/: __init__.py  cli.py  config.py  llm.py  logger.py  orchestrator.py
src/autonote/audio/: apply_labels.py  compress.py  diarize.py  label.py  merge_diarization.py  record.py  reformat.py  summarize.py  transcribe.py  transcription_providers.py
src/autonote/obsidian/: calendar.py  extract_metadata.py  frontmatter.py  update_index.py  wikilink.py
src/autonote/realtime/: __init__.py  aggregator.py  app.py  event_bus.py  models.py  recorder.py  transcriber.py  vad.py  vad_monitor.py  web.py
src/autonote/realtime/static/: index.html
src/autonote/reasoning/: __init__.py  context_manager.py  dispatcher.py  mission.py  prompts.py
src/autonote/reasoning/workers/: action_items.py  adhoc_reply.py  base.py  coach.py  contradictions.py  custom.py  reply.py  summary.py
tests/: README.md  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_audio_compress.py  test_audio_reformat.py  test_audio_summarize.py  test_audio_transcribe.py  test_config.py  test_llm.py  test_logger.py  test_obsidian_extract_metadata.py  test_obsidian_frontmatter.py  test_obsidian_update_index.py  test_obsidian_wikilink.py  test_orchestrator.py  test_realtime_app.py  test_realtime_models.py  test_realtime_recorder.py  test_realtime_transcriber.py  test_reasoning_coach.py  test_reasoning_context_manager.py  test_reasoning_dispatcher.py  test_reasoning_workers.py  test_recorder_tee.py  test_turn_aggregator.py  test_vad.py  test_vad_monitor.py
