[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonote"
version = "0.1.0"
description = "Meeting Copilot - Record, Transcribe, Diarize, Summarize."
authors = [{ name = "Felipe" }]
requires-python = ">=3.9"
dependencies = [
    "faster-whisper",
    "requests",
    "tqdm",
    "python-dotenv",
    "pyyaml",
    "rich",
    "pydantic>=2.0.0",
    "litellm>=1.82.6",
    "openai>=1.0.0",
    "nvidia-cublas-cu12",
]

[project.optional-dependencies]
diarize = [
    "pyannote.audio",
]
transcribe-external = [
    "assemblyai",
]
realtime = [
    "assemblyai",
    "textual>=0.50.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
autonote = "autonote.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
omit = [
    "src/autonote/cli.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
